tried fixing the img overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,7 @@ button {
     padding-left: 100px;
     padding-bottom: 100px; 
     flex-wrap: nowrap;
+    gap: 10px;
 }
 
 
